--- a/configure-url.yml
+++ b/configure-url.yml
@@ -10,7 +10,7 @@
        block: |
          <property>
          <name>fs.defaultFS</name>
-         <value>hdfs://amazon-1:9000</value>
+         <value>hdfs://ec2-18-204-195-225.compute-1.amazonaws.com:9000</value>
          </property>
        backup: yes
        owner: ubuntu
@@ -24,7 +24,7 @@
        block: |
          <property>
          <name>mapred.job.tracker</name>
-         <value>amazon-1:54311</value>
+         <value>ec2-18-204-195-225.compute-1.amazonaws.com:54311</value>
          </property>
          <property>
          <name>mapreduce.framework.name</name>
@@ -97,7 +97,7 @@
        dest: /usr/local/hadoop/etc/hadoop/masters
        insertafter: EOF
        block: |
-         amazon-1
+         ec2-18-204-195-225.compute-1.amazonaws.com
        backup: yes
        owner: ubuntu
 
@@ -107,9 +107,9 @@
        dest: /usr/local/hadoop/etc/hadoop/workers
        insertafter: EOF
        block: |
-         amazon-4
-         amazon-3
-         amazon-2
+         ec2-54-165-107-120.compute-1.amazonaws.com
+         ec2-54-86-236-105.compute-1.amazonaws.com
+         ec2-3-87-226-149.compute-1.amazonaws.com
        backup: yes
        owner: ubuntu
 
