--- a/upgrade-yarn.yml
+++ b/upgrade-yarn.yml
@@ -9,7 +9,7 @@
        block: |
          <property>
          <name>mapred.job.tracker</name>
-         <value>amazon-1:54311</value>
+         <value>ec2-44-200-246-50.compute-1.amazonaws.com:54311</value>
          </property>
          <property>
          <name>mapreduce.framework.name</name>
@@ -59,7 +59,7 @@
          </property>
          <property>
          <name>yarn.resourcemanager.hostname</name>
-         <value>amazon-1</value>
+         <value>ec2-44-200-246-50.compute-1.amazonaws.com</value>
          </property>
          <property>         
          <name>yarn.nodemanager.resource.memory-mb</name>
