--- a/configure-url.yml
+++ b/configure-url.yml
@@ -10,7 +10,7 @@
        block: |
          <property>
          <name>fs.defaultFS</name>
-         <value>hdfs://ec2-18-204-195-225.compute-1.amazonaws.com:9000</value>
+         <value>hdfs://ec2-3-80-90-166.compute-1.amazonaws.com:9000</value>
          </property>
        backup: yes
        owner: ubuntu
@@ -24,7 +24,7 @@
        block: |
          <property>
          <name>mapred.job.tracker</name>
-         <value>ec2-18-204-195-225.compute-1.amazonaws.com:54311</value>
+         <value>ec2-3-80-90-166.compute-1.amazonaws.com:54311</value>
          </property>
          <property>
          <name>mapreduce.framework.name</name>
@@ -77,7 +77,7 @@
          </property>
          <property>
          <name>yarn.resourcemanager.hostname</name>
-         <value>amazon-1</value>
+         <value>ec2-3-80-90-166.compute-1.amazonaws.com</value>
          </property>
        backup: yes
        owner: ubuntu
@@ -97,7 +97,7 @@
        dest: /usr/local/hadoop/etc/hadoop/masters
        insertafter: EOF
        block: |
-         ec2-18-204-195-225.compute-1.amazonaws.com
+         ec2-3-80-90-166.compute-1.amazonaws.com
        backup: yes
        owner: ubuntu
 
@@ -107,9 +107,9 @@
        dest: /usr/local/hadoop/etc/hadoop/workers
        insertafter: EOF
        block: |
-         ec2-54-165-107-120.compute-1.amazonaws.com
-         ec2-54-86-236-105.compute-1.amazonaws.com
-         ec2-3-87-226-149.compute-1.amazonaws.com
+         ec2-107-23-139-27.compute-1.amazonaws.com
+         ec2-18-204-228-183.compute-1.amazonaws.com
+        ec2-54-86-145-125.compute-1.amazonaws.com
        backup: yes
        owner: ubuntu
 
