--- a/install-hadoop.yml
+++ b/install-hadoop.yml
@@ -56,6 +56,7 @@
        insertafter: EOF
        block: |
          export HADOOP_HOME=/usr/local/hadoop
+         export PATH="/usr/local/bin:$PATH"
          export PATH=$PATH:$HADOOP_HOME/bin
          export PATH=$PATH:$HADOOP_HOME/sbin
          export HADOOP_MAPRED_HOME=${HADOOP_HOME}
