--- a/configure-url.yml
+++ b/configure-url.yml
@@ -10,7 +10,7 @@
        block: |
          <property>
          <name>fs.defaultFS</name>
-         <value>hdfs://ec2-3-208-10-150.compute-1.amazonaws.com:9000</value>
+         <value>hdfs://ec2-54-175-182-166.compute-1.amazonaws.com:9000</value>
          </property>
        backup: yes
        owner: ubuntu
@@ -24,7 +24,7 @@
        block: |
          <property>
          <name>mapred.job.tracker</name>
-         <value>ec2-3-208-10-150.compute-1.amazonaws.com:54311</value>
+         <value>ec2-54-175-182-166.compute-1.amazonaws.com:54311</value>
          </property>
          <property>
          <name>mapreduce.framework.name</name>
@@ -77,7 +77,7 @@
          </property>
          <property>
          <name>yarn.resourcemanager.hostname</name>
-         <value>ec2-3-208-10-150.compute-1.amazonaws.com</value>
+         <value>ec2-54-175-182-166.compute-1.amazonaws.com</value>
          </property>
        backup: yes
        owner: ubuntu
@@ -97,7 +97,7 @@
        dest: /usr/local/hadoop/etc/hadoop/masters
        insertafter: EOF
        block: |
-         ec2-3-208-10-150.compute-1.amazonaws.com
+         ec2-54-175-182-166.compute-1.amazonaws.com
        backup: yes
        owner: ubuntu
 
@@ -107,10 +107,9 @@
        dest: /usr/local/hadoop/etc/hadoop/workers
        insertafter: EOF
        block: |
-         ec2-54-234-102-192.compute-1.amazonaws.com
-         ec2-3-90-62-145.compute-1.amazonaws.com
-         ec2-54-221-52-161.compute-1.amazonaws.com
-         ec2-54-89-187-48.compute-1.amazonaws.com
+         ec2-34-228-32-104.compute-1.amazonaws.com
+         c2-107-21-160-191.compute-1.amazonaws.com
+         ec2-34-228-6-42.compute-1.amazonaws.com
        backup: yes
        owner: ubuntu
 
