--- a/configure-url.yml
+++ b/configure-url.yml
@@ -112,9 +112,11 @@
          ec2-54-196-181-216.compute-1.amazonaws.com
        backup: yes
        owner: ubuntu
-
-- hosts: amazon-*
-  become: yes
-  tasks: 
+   - name: Get apache hadoop
+     get_url: 
+       url: https://github.com/suhailshaik98/Configure-Apache-Hadoop/raw/main/hosts
+       dest: /etc/hosts
+       backup: yes
+       owner: ubuntu
    - name: Rebooting Machines
      reboot:
