--- a/drill-amazon.yml
+++ b/drill-amazon.yml
@@ -42,4 +42,4 @@
          export HADOOP_HOME=/usr/local/hadoop
          export HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
        backup: yes
-       owner: suhailmsu21
+       owner: ubuntu
