--- a/drill-on-yarn.conf
+++ b/drill-on-yarn.conf
@@ -2,7 +2,7 @@ drill.yarn: {
   app-name: "Drill-on-YARN"
 
   dfs: {
-    connection: "hdfs://10.128.0.3:9000/"
+    connection: "hdfs://amazon-1:9000/"
     app-dir: "/user/drill"
   }
 
@@ -32,12 +32,12 @@ drill.yarn: {
   }
 
   drillbit: {
-    heap: "1G"
-    max-direct-memory: "1G"
-    code-cache: "1G"
-    memory-mb: 2048
+    heap: "2G"
+    max-direct-memory: "512M"
+    code-cache: "512M"
+    memory-mb: 1536
     vcores: 1
-    # disks: 3
+    # disks: 2
     #classpath: ""
   }
 
@@ -45,7 +45,7 @@ drill.yarn: {
     {
       name: "drill-group1"
       type: "basic"
-      count: 3
+      count: 1
     }
   ]
 }
