--- a/amazon-zzokeerp.yml
+++ b/amazon-zzokeerp.yml
@@ -33,6 +33,7 @@
          syncLimit=2      
          server.1=amazon-1:2888:3888
          server.2=amazon-2:2888:3888
+         server.3=amazon-3:2888:3888         
        backup: yes
        owner: ubuntu 
    - name: Creating myid file
@@ -57,6 +58,7 @@
          syncLimit=2      
          server.1=amazon-1:2888:3888
          server.2=amazon-2:2888:3888
+         server.3=amazon-3:2888:3888            
        backup: yes
        owner: ubuntu
 
