--- a/configure-url.yml
+++ b/configure-url.yml
@@ -108,6 +108,7 @@
        insertafter: EOF
        block: |
          amazon-2
+         amazon-3
        backup: yes
        owner: ubuntu
 - hosts: amazon-*
