--- a/amazon-zzokeerp.yml
+++ b/amazon-zzokeerp.yml
@@ -34,6 +34,7 @@
          server.1=amazon-1:2888:3888
          server.2=amazon-2:2888:3888
          server.3=amazon-3:2888:3888
+         server.4=amazon-4:2888:3888
        backup: yes
        owner: ubuntu 
    - name: Creating myid file
@@ -59,6 +60,7 @@
          server.1=amazon-1:2888:3888
          server.2=amazon-2:2888:3888
          server.3=amazon-3:2888:3888
+         server.4=amazon-4:2888:3888
        backup: yes
        owner: ubuntu
 
