--- a/amazon-zzokeerp.yml
+++ b/amazon-zzokeerp.yml
@@ -35,6 +35,7 @@
          server.2=amazon-2:2888:3888
          server.3=amazon-3:2888:3888
          server.4=amazon-4:2888:3888
+         server.5=amazon-5:2888:3888
        backup: yes
        owner: ubuntu 
    - name: Creating myid file
@@ -61,6 +62,7 @@
          server.2=amazon-2:2888:3888
          server.3=amazon-3:2888:3888
          server.4=amazon-4:2888:3888
+         server.5=amazon-5:2888:3888
        backup: yes
        owner: ubuntu
 
@@ -137,3 +139,22 @@
        owner: ubuntu
    - name: Get apache hadoop
      raw:  mv /etc/zookeeper/conf/myid4 /etc/zookeeper/conf/myid
+- hosts: amazon-5
+  become: yes
+  tasks:
+   - name: Download Myid
+     get_url: 
+       url: https://github.com/suhailshaik98/Configure-Apache-Hadoop/raw/main/myid5
+       dest: /etc/zookeeper/data
+       backup: yes
+       owner: ubuntu
+   - name: Get apache hadoop
+     raw:  mv /etc/zookeeper/data/myid5 /etc/zookeeper/data/myid
+   - name: Download Myid
+     get_url: 
+       url: https://github.com/suhailshaik98/Configure-Apache-Hadoop/raw/main/myid5
+       dest: /etc/zookeeper/conf
+       backup: yes
+       owner: ubuntu
+   - name: Get apache hadoop
+     raw:  mv /etc/zookeeper/conf/myid5 /etc/zookeeper/conf/myid     
