--- a/configure-url.yml
+++ b/configure-url.yml
@@ -108,11 +108,15 @@
        insertafter: EOF
        block: |
          amazon-2
+         amazon-3
+         amazon-4
+         amazon-5
+         amazon-6         
        backup: yes
        owner: ubuntu
        
-- hosts: amazon-*
-  become: yes
-  tasks:
-   - name: Rebooting Machines
-     reboot:
+#- hosts: amazon-*
+#  become: yes
+#  tasks:
+#   - name: Rebooting Machines
+#     reboot:
