--- a/upgrade-yarn.yml
+++ b/upgrade-yarn.yml
@@ -80,3 +80,8 @@
        backup: yes
        owner: ubuntu
 
+- hosts: amazon-*
+  become: yes
+  tasks:
+   - name: Rebooting Machines
+     reboot:
