--- a/googlehadoopin.yml
+++ b/googlehadoopin.yml
@@ -120,7 +120,7 @@
        block: |
          <property>
          <name>mapred.job.tracker</name>
-         <value>10.128.0.3:54311</value>
+         <value>google-1:54311</value>
          </property>
          <property>
          <name>mapreduce.framework.name</name>
@@ -163,7 +163,7 @@
        block: |
          <property>
          <name>dfs.replication</name>
-         <value>3</value>
+         <value>2</value>
          </property>
          <property>
          <name>dfs.namenode.name.dir</name>
@@ -193,7 +193,7 @@
          </property>
          <property>
          <name>yarn.resourcemanager.hostname</name>
-         <value>10.128.0.3</value>
+         <value>google-1</value>
          </property>
          <property>         
          <name>yarn.nodemanager.resource.memory-mb</name>
@@ -229,7 +229,7 @@
        dest: /home/suhailmsu21/hadoop/etc/hadoop/masters
        insertafter: EOF
        block: |
-         10.128.0.3
+         google-1
        backup: yes
        owner: suhailmsu21
 
@@ -239,9 +239,9 @@
        dest: /home/suhailmsu21/hadoop/etc/hadoop/workers
        insertafter: EOF
        block: |
-         10.128.0.4
-         10.128.0.6
-         10.128.0.8
+         google-2
+         google-3
+         google-4
        backup: yes
        owner: suhailmsu21
    - name: Transferring files to usr/local directory
