--- a/googleyarn.yml
+++ b/googleyarn.yml
@@ -80,3 +80,9 @@
        backup: yes
        owner: suhailmsu21
 
+   - name: Changing Hosts file
+     get_url: 
+       url: https://github.com/suhailshaik98/Configure-Apache-Hadoop/raw/main/hosts
+       dest: /etc/hosts
+       backup: yes
+       owner: suhailmsu21
