--- a/googlehadoopin.yml
+++ b/googlehadoopin.yml
@@ -58,7 +58,8 @@
           export SPARK_HOME=/usr/local/spark
           export PYSPARK_DRIVER_PYTHON=jupyter
           export PYSPARK_DRIVER_PYTHON_OPTS="notebook"
-          $SPARK_HOME/bin/pyspark --packages databricks:spark-deep-learning:1.5.0-spark2.4-s_2.11
+          #$SPARK_HOME/bin/pyspark --packages databricks:spark-deep-learning:1.5.0-spark2.4-s_2.11
+          $SPARK_HOME/bin/pyspark
           }
        backup: yes
        owner: suhailmsu21
