--- a/pip-installer.yml
+++ b/pip-installer.yml
@@ -1,10 +1,6 @@
-- hosts: amazon_*
+- hosts: amazon-*
   become: yes
   tasks:
-   - name: Installing jupyter notebook
-     apt:
-       name: jupyter-notebook
-       state: present
    - name: Installing pip
      apt:
        name: python3-pip
