--- a/pip-installer-google.yml
+++ b/pip-installer-google.yml
@@ -1,6 +1,11 @@
 - hosts: google-*
   become: yes
   tasks:
+   - name: Changing Hosts file
+     get_url: 
+       url: https://github.com/suhailshaik98/Configure-Apache-Hadoop/raw/main/hosts
+       dest: /etc/hosts
+       backup: yes  
    - name: Installing pip
      apt:
        name: python3-pip
