--- a/googlehadoopin.yml
+++ b/googlehadoopin.yml
@@ -1,4 +1,4 @@
-- hosts: google-3
+- hosts: google-*
   become: yes
   pre_tasks:
    - name: Run the equivalent of "apt-get update" as a separate step
