--- a/install-hadoop.yml
+++ b/install-hadoop.yml
@@ -148,6 +148,13 @@
          </property>
        backup: yes
        owner: ubuntu
+   - name: Removing accessibility.properties
+     ansible.builtin.lineinfile:
+       path: sudo vim /etc/java-8-openjdk/accessibility.properties
+       regexp: 'assistive_technologies=org.GNOME.Accessibility.AtkWrapper'
+       line: '#assistive_technologies=org.GNOME.Accessibility.AtkWrapper'
+       backrefs: yes
+       owner: ubuntu       
 
    - name: Editing yarn-site.xml File
      
