--- a/spark-standalone.yml
+++ b/spark-standalone.yml
@@ -12,6 +12,10 @@
        block: |
          export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
          export SPARK_MASTER_HOST=amazon-1
+         export SPARK_WORKER_CORES=8
+         export SPARK_WORKER_INSTANCES=5
+         export SPARK_WORKER_MEMORY=6G
+         export SPARK_EXECUTOR_INSTANCES=2
        backup: yes
        owner: ubuntu         
    - name: Removing some lines in slaves start File
