--- a/spark-url.yml
+++ b/spark-url.yml
@@ -20,7 +20,8 @@
          spark.history.ui.enabled true
          spark.ui.enabled true
          spark.ui.killenabled true
-         spark.executor.instances 5
+         spark.executor.instances 2
+         spark.worker.instances 5
          spark.executor.memoryOverhead 600
          spark.ui.port 4040
        backup: yes
