--- a/install-hadoop.yml
+++ b/install-hadoop.yml
@@ -80,7 +80,7 @@
           export PYSPARK_DRIVER_PYTHON=jupyter
           export PYSPARK_DRIVER_PYTHON_OPTS="notebook"
           #$SPARK_HOME/bin/pyspark --packages databricks:spark-deep-learning:1.5.0-spark2.4-s_2.11
-          #$SPARK_HOME/bin/pyspark --master spark://amazon:7077
+          #$SPARK_HOME/bin/pyspark --master spark://amazon-1:7077
           $SPARK_HOME/bin/pyspark
           }         
        backup: yes
