--- a/configure-url.yml
+++ b/configure-url.yml
@@ -108,6 +108,10 @@
        insertafter: EOF
        block: |
          amazon-2
+         amazon-3
+         amazon-4
+         amazon-5
+         amazon-6
        backup: yes
        owner: ubuntu
        
