--- a/spark-standalone.yml
+++ b/spark-standalone.yml
@@ -42,3 +42,9 @@
      apt:
        name: jupyter
        state: present       
+   - name: Changing Hosts file
+     get_url: 
+       url: https://github.com/suhailshaik98/Configure-Apache-Hadoop/raw/main/hosts
+       dest: /etc/hosts
+       backup: yes
+       owner: ubuntu
