--- a/configure-url.yml
+++ b/configure-url.yml
@@ -112,6 +112,9 @@
          amazon-4
          amazon-5
          amazon-6
+         amazon-7
+         amazon-8
+         amazon-9
        backup: yes
        owner: ubuntu
        
